fixed Campaign name is overlapping-CRPT-1560

--- a/app/assets/stylesheets/campaign_details.less
+++ b/app/assets/stylesheets/campaign_details.less
@@ -33,8 +33,9 @@
     .campaign_name {
       font-size: 26px;
       color: #313233;
-      max-width: 780px;
+      max-width: 950px;
       font-weight: bold;
+      word-wrap : break-word;
       .sub_title {
         font-weight: normal;
         font-size: 14px ;
