--- a/app/assets/stylesheets/campaign_list.less
+++ b/app/assets/stylesheets/campaign_list.less
@@ -1884,6 +1884,7 @@ button, i, input[type="submit"] {
         margin: 0 40px 0 12px;
         .heading_holder {
           min-height: 80px ;
+          word-wrap: break-word;
         }
         .campaigns_list_buttons_holder {
           .strategies_btn {
